<resources>
    <string name="app_name">MiniScout</string>
    <string name="match_number">Match Number</string>
    <string name="team_number">Team Number</string>
    <string name="start">Start</string>
    <string name="total_placement_one">TOTAL ELEMENT ONE - %1$s</string>
    <string name="total_placement_two">TOTAL ELEMENT TWO - %1$s</string>
    <string name="btn_placement_one">GAME ELEMENT ONE - %1$s</string>
    <string name="btn_placement_two">GAME ELEMENT TWO - %1$s</string>
    <string name="final_incap_status">FINAL STATUS - %1$s</string>

</resources>
