<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/standard_margin"
    >

    <TextView
        style="@style/tv_standard_gray"
        android:layout_weight="2"
        android:id="@+id/tv_sumOfPlacemenOne"
        android:text="@string/total_placement_one"
        />
    <TextView
        style="@style/tv_standard_gray"
        android:layout_weight="2"
        android:id="@+id/tv_sumOfPlacemenTwo"
        android:text="@string/total_placement_two"
        />
    <TextView
        style="@style/tv_standard_gray"
        android:layout_weight="2"
        android:id="@+id/tv_finalIncap"
        android:text="@string/final_incap_status"
        />

    <TextView
        style="@style/tv_standard_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weighted"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/match_number"
        />

    <EditText
        style="@style/et_standard_gray"
        android:layout_width="match_parent"
        android:id="@+id/et_final_match_number"
        android:layout_height="@dimen/weighted"
        android:layout_weight="3"
        />

    <TextView
        style="@style/tv_standard_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weighted"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/team_number"
        />

    <EditText
        style="@style/et_standard_gray"
        android:layout_weight="3"
        android:id="@+id/et_final_team_number"


        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxl_margin"/>
    <Button
        style="@style/btn_standard_white"
        android:layout_weight="2"
        android:text="@string/start"
        android:id="@+id/btn_start"
        android:onClick="startNextActivity"



        />



</LinearLayout>